--- a/package.json
+++ b/package.json
@@ -12,19 +12,23 @@
     "build:goat-search-index": "node scripts/buildDiseaseSearchIndex.js"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^2.2.0",
     "expo": "^52.0.0",
     "expo-linking": "~7.0.5",
     "expo-router": "^4.0.0",
     "expo-splash-screen": "~0.29.24",
     "expo-status-bar": "~2.0.0",
+    "firebase": "^12.6.0",
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-native": "0.76.9",
     "react-native-safe-area-context": "4.12.0",
-    "react-native-screens": "~4.4.0"
+    "react-native-screens": "~4.4.0",
+    "uuid": "^13.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
+    "@types/node": "^24.10.1",
     "@types/react": "~18.3.12",
     "ajv": "^8.17.1",
     "eslint": "^8.0.0",
