--- a/app.json
+++ b/app.json
@@ -1,36 +1,56 @@
 {
   "expo": {
-    "name": "FAVI - Livestock Care",
-    "slug": "favi",
+    "name": "FAVI",
+    "slug": "livestock-care",
     "version": "1.0.0",
     "orientation": "portrait",
-    "icon": "./assets/images/icon.png",
+    "icon": "./assets/images/favi-logo.png",
     "userInterfaceStyle": "light",
     "scheme": "favi",
     "newArchEnabled": true,
     "splash": {
-      "image": "./assets/images/splash-icon.png",
-      "backgroundColor": "#ECFDF5",
+      "image": "./assets/images/favi-favi.png",
+      "backgroundColor": "#F0F9F4",
       "resizeMode": "contain"
     },
     "android": {
       "package": "com.favi.livestock",
-      "versionCode": 1,
+      "versionCode": 2,
+      "icon": "./assets/images/favi-logo.png",
       "adaptiveIcon": {
-        "foregroundImage": "./assets/images/icon.png",
+        "foregroundImage": "./assets/images/favi-logo.png",
         "backgroundColor": "#C9FFE9"
       },
-      "newArchEnabled": true
+      "newArchEnabled": true,
+      "splash": {
+        "image": "./assets/images/favi-logo.png",
+        "backgroundColor": "#F0F9F4",
+        "resizeMode": "contain"
+      }
     },
     "ios": {
       "bundleIdentifier": "com.favi.livestock",
       "supportsTablet": false,
-      "icon": "./assets/images/icon.png",
-      "newArchEnabled": true
+      "icon": "./assets/images/favi-logo.png",
+      "newArchEnabled": true,
+      "splash": {
+        "image": "./assets/images/favi-logo.png",
+        "backgroundColor": "#F0F9F4",
+        "resizeMode": "contain"
+      }
     },
-    "plugins": ["expo-router"],
+    "plugins": [
+      "expo-router",
+      [
+        "expo-build-properties",
+        {
+          "android": {
+            "targetSdkVersion": 35
+          }
+        }
+      ]
+    ],
     "extra": {
-      "router": { "origin": false },
       "eas": {
         "projectId": "dc4387ce-1706-48d1-a11a-a2f6f8da4ed5"
       }
