--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
   "web": "expo start --web",
   "lint": "eslint .",
   "build:goat-search-index": "node scripts/buildDiseaseSearchIndex.js",
-  "build:disease-registry": "node scripts/buildDiseaseRegistry.js"
+  "build:disease-registry": "node scripts/buildDiseaseRegistry.js",
+  "build:drug-registry": "node scripts/buildDrugRegistry.js"
 },
 
   "dependencies": {
