thêm chức năng nhận diện giọng nói thanh tìm kiếm nhanh

--- a/app.json
+++ b/app.json
@@ -48,7 +48,10 @@
             "targetSdkVersion": 35
           }
         }
-      ]
+      ],
+      "expo-speech-transcriber",
+      "expo-audio"
+      
     ],
     "extra": {
       "eas": {
