--- a/package.json
+++ b/package.json
@@ -4,24 +4,26 @@
   "private": true,
   "main": "expo-router/entry",
   "scripts": {
-  "start": "expo start",
-  "android": "expo run:android",
-  "ios": "expo run:ios",
-  "web": "expo start --web",
-  "lint": "eslint .",
-  "build:goat-search-index": "node scripts/buildDiseaseSearchIndex.js",
-  "build:disease-registry": "node scripts/buildDiseaseRegistry.js",
-  "build:drug-registry": "node scripts/buildDrugRegistry.js",
-  "fix:drug": "node scripts/fixDrugString.js",
-  "scan:treatment-drugs": "node scripts/scanTreatmentDrugs.js",
-  "sum:unmapped-drugs": "node scripts/summarizeUnmappedDrugs.js"
-},
-
+    "start": "expo start",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
+    "web": "expo start --web",
+    "lint": "eslint .",
+    "build:goat-search-index": "node scripts/buildDiseaseSearchIndex.js",
+    "build:disease-registry": "node scripts/buildDiseaseRegistry.js",
+    "build:drug-registry": "node scripts/buildDrugRegistry.js",
+    "fix:drug": "node scripts/fixDrugString.js",
+    "scan:treatment-drugs": "node scripts/scanTreatmentDrugs.js",
+    "sum:unmapped-drugs": "node scripts/summarizeUnmappedDrugs.js"
+  },
   "dependencies": {
     "@react-native-async-storage/async-storage": "^2.2.0",
     "expo": "^52.0.0",
+    "expo-audio": "~0.3.5",
+    "expo-build-properties": "~0.13.3",
     "expo-linking": "~7.0.5",
     "expo-router": "^4.0.0",
+    "expo-speech-transcriber": "^0.1.6",
     "expo-splash-screen": "~0.29.24",
     "expo-status-bar": "~2.0.0",
     "firebase": "^12.6.0",
@@ -30,8 +32,7 @@
     "react-native": "0.76.9",
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.4.0",
-    "uuid": "^13.0.0",
-    "expo-build-properties": "~0.13.3"
+    "uuid": "^13.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
