--- a/package.json
+++ b/package.json
@@ -17,10 +17,11 @@
     "sum:unmapped-drugs": "node scripts/summarizeUnmappedDrugs.js"
   },
   "dependencies": {
-    "@react-native-async-storage/async-storage": "^2.2.0",
+    "@react-native-async-storage/async-storage": "1.23.1",
     "expo": "^52.0.0",
     "expo-audio": "~0.3.5",
     "expo-build-properties": "~0.13.3",
+    "expo-constants": "~17.0.8",
     "expo-linking": "~7.0.5",
     "expo-router": "^4.0.0",
     "expo-speech-transcriber": "^0.1.6",
