--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "expo-audio": "~0.3.5",
     "expo-build-properties": "~0.13.3",
     "expo-constants": "~17.0.8",
+    "expo-dev-client": "~5.0.20",
     "expo-linking": "~7.0.5",
     "expo-router": "^4.0.0",
     "expo-speech-transcriber": "^0.1.6",
@@ -31,6 +32,7 @@
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-native": "0.76.9",
+    "react-native-mmkv": "^2.12.2",
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.4.0",
     "uuid": "^13.0.0"
